# 75.52-MensajerO

./: .cproject  .gitignore  .gitignore~  .project  README.md
src/server/: .cproject  .gitignore  .project  CMakeLists.txt  build.sh  clean.sh  coverage.sh  run.sh  runTests.sh
src/server/code/main/: .gitignore  CMakeLists.txt  ServerOptions.cpp  main.cpp
src/server/code/main/database/: CMakeLists.txt  Database.cpp  IPersistible.cpp
src/server/code/main/exceptions/: BaseException.cpp  FileNotFoundException.cpp  InvalidKeyException.cpp  InvalidUsernameException.cpp  KeyNotFoundException.cpp  NotSerializedDataException.cpp
src/server/code/main/services/: BroadcastService.cpp  CMakeLists.txt  Connection.cpp  ConnectionManager.cpp  CurrentChatsService.cpp  DeleteChatService.cpp  LogInService.cpp  LogOutService.cpp  NullService.cpp  QueryParams.cpp  RestServer.cpp  SendMessageService.cpp  ServerConfig.cpp  ServerThread.cpp  ServiceFactory.cpp  SignUpService.cpp  SomethingForMeService.cpp  UserConfigService.cpp  UsersService.cpp
src/server/code/main/user/: User.cpp
src/server/code/main/utilities/: Base64.cpp  CMakeLists.txt  ConnectionManager.cpp  Date.cpp  JsonMap.cpp  LocationManager.cpp  Logger.cpp  Mutex.cpp  NumberConverter.cpp  Random.cpp  Thread.cpp  Time.cpp
src/server/code/tests/: ArgsParserTests.cpp  Base64Tests.cpp  Base64Tests.h  CMakeLists.txt  LocationManagerTests.cpp  NumberConverterTests.cpp  ServerOptionsTests.cpp  main.cpp
src/server/code/tests/database/: DatabaseTests.cpp
src/server/code/tests/logger/: LoggerTest.cpp
src/server/code/tests/rest-client/: RestClient.cpp  RestClientTest.cpp
src/server/code/tests/services/: BroadcastServiceTest.cpp  CMakeLists.txt  ConnectionManagerTest.cpp  CurrentChatsServiceTest.cpp  DeleteChatServiceTest.cpp  EchoService.cpp  LogInServiceTest.cpp  NullServiceTest.cpp  RestServerTest.cpp  SendMessageServiceTest.cpp  ServerConfigTest.cpp  ServiceFactoryTest.cpp  ServiceTest.cpp  SignUpServiceTest.cpp  SomethingForMeServiceTest.cpp  UserConfigServiceTest.cpp  UsersServiceTest.cpp
src/server/code/tests/user/: userTests.cpp
src/server/config/: config.json  geolocation.json
src/server/doxydocs/: MensajerO.doxyfile
src/server/include/main/: ServerOptions.h  config.h
src/server/include/main/database/: Database.h  IPersistible.h
src/server/include/main/exceptions/: BaseException.h  FileNotFoundException.h  InvalidKeyException.h  InvalidUsernameException.h  KeyNotFoundException.h  NotSerializedDataException.h
src/server/include/main/services/: BroadcastService.h  Connection.h  ConnectionManager.h  CurrentChatsService.h  DeleteChatService.h  LogInService.h  LogOutService.h  NullService.h  RestServer.h  SendMessageService.h  ServerConfig.h  (+8 more)
src/server/include/tests/: ArgsParserTests.h  LocationManagerTests.h  ServerOptionsTests.h
src/server/main/: CMakeLists.txt  ServerOptions.cpp  ServerOptions.h  config.h  main.cpp  profPicture.h
src/server/main/database/: ChatDB.cpp  ChatDB.h  Database.cpp  Database.h
src/server/main/exceptions/: BaseException.cpp  BaseException.h  FileNotFoundException.cpp  FileNotFoundException.h  InvalidKeyException.cpp  InvalidKeyException.h  InvalidUsernameException.cpp  InvalidUsernameException.h  KeyNotFoundException.cpp  NotSerializedDataException.cpp  NotSerializedDataException.h
src/server/main/interfaces/: ISerializable.h
src/server/main/logger/: Logger.cpp  Logger.h  logger.cpp  logger.h
src/server/main/rocksdb_simple_example/: IDENTITY  LOG
src/server/main/services/: CMakeLists.txt  Connection.cpp  Connection.h  ConnectionManager.cpp  ConnectionManager.h  CreateUserService.cpp  CreateUserService.h  CurrentChatsService.cpp  CurrentChatsService.h  DeleteChatService.cpp  DeleteChatService.h  EchoService.cpp  EchoService.h  ImAliveService.cpp  ImAliveService.h  LogInService.cpp  LogInService.h  NullService.cpp  NullService.h  QueryParams.cpp  QueryParams.h  RestServer.cpp  RestServer.h  SendMessageService.cpp  SendMessageService.h  ServerConfig.cpp  ServerConfig.h  ServerThread.cpp  ServerThread.h  ServiceCollection.cpp  ServiceCollection.h  ServiceFactory.cpp  ServiceFactory.h  ServiceInterface.h  SignUpService.cpp  SignUpService.h  SomethingForMeService.cpp  SomethingForMeService.h  UserConfigService.cpp  UserConfigService.h  (+2 more)
src/server/main/user/: Message.cpp  Message.h  User.cpp  User.h
src/server/main/utilities/: Base64.cpp  CMakeLists.txt  Date.cpp  Date.h  JsonMap.cpp  LocationManager.cpp  LocationManager.h  Logger.cpp  Logger.h  MD5.cpp  Mutex.cpp  Mutex.h  NumberConverter.cpp  NumberConverter.h  Thread.cpp  Thread.h  Time.cpp  Time.h  base64.cpp  base64.h  stringUtil.cpp  stringUtil.h
src/server/stress/: stress-tests.py
src/server/stress-tests/: stress-tests.py
src/server/tests/: .gitignore  ArgsParserTests.cpp  ArgsParserTests.h  CMakeLists.txt  NumberConverterTests.cpp  NumberConverterTests.h  main.cpp
src/server/tests/database/: .gitignore  ChatDBTests.cpp  ChatDBTests.h  DatabaseTests.cpp  DatabaseTests.h
src/server/tests/logger/: LoggerTest.cpp  LoggerTest.h  LoggerTests.cpp  loggerTests.cpp  loggerTests.h
src/server/tests/rest-client/: CMakeLists.txt  RestClient.cpp  RestClient.h  RestClientTest.cpp  RestClientTest.h
src/server/tests/services/: CMakeLists.txt  ConnectionManagerTest.cpp  ConnectionManagerTest.h  CurrentChatsServiceTest.cpp  CurrentChatsServiceTest.h  DeleteChatServiceTest.cpp  DeleteChatServiceTest.h  EchoService.cpp  EchoService.h  LogInServiceTest.cpp  LogInServiceTest.h  RestServerTest.cpp  RestServerTest.h  SendMessageServiceTest.cpp  SendMessageServiceTest.h  ServiceCollectionTest.cpp  ServiceCollectionTest.h  ServiceFactoryTest.cpp  ServiceFactoryTest.h  ServicesIntegrationTests.cpp  ServicesIntegrationTests.h  SignUpServiceTest.cpp  SignUpServiceTest.h  SomethingForMeServiceTest.cpp  SomethingForMeServiceTest.h  UserConfigServiceTest.cpp  UserConfigServiceTest.h  UsersServiceTest.cpp  UsersServiceTest.h
src/server/tests/user/: chatTests.cpp  chatTests.h  messageTests.cpp  messageTests.h  userTests.cpp  userTests.h
(+878 files in other folders)
